# jna

./: #ChangeLog.rej#  .classpath  .gitattributes  .gitignore  .project  .travis.yml  ANDROID.md  CHANGES  CHANGES.md  ChangeLog  ChangeLog.libffi  LICENSE  LICENSE.AL  LICENSE.LGPL  Makefile.am  Makefile.in  README  README.markdown  README.md  RELEASE.md  SECURITY.md  TODO  WINDOWS.md  aclocal.m4  appveyor.yml  autogen.sh  bnd.bnd  build-ant-tools.xml  build-ios.sh  build-iphone.sh  build.xml  checkstyle.xml  checkstyle_header.txt  checkstyle_suppressions.xml  common.xml  configure  configure.ac  create-export-package-metadata-pom.xml  create-export-package-metadata.sh  fficonfig.h.in  (+18 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  graalvm.workflow.yaml  graalvm.yaml  native-libraries-macOS.yaml  scorecard.yml
.pc/: applied-patches
.pc/aarch64/: ChangeLog  Makefile.am  README  configure
.pc/aix-ibm-xlc/: ChangeLog  configure  configure.ac
.pc/alpha/: ChangeLog
.pc/amd64-openbsd/: ChangeLog.libffi  configure  configure.ac
.pc/amiga/: ChangeLog  configure  configure.ac
.pc/apple-fixes/: ChangeLog
.pc/autoconf-archive-update/: Makefile.in  aclocal.m4  configure
.pc/avr32/: ChangeLog.libffi  Makefile.am  configure  configure.ac
.pc/avr32-test/: ChangeLog.libffi
.pc/bad-abi-fix/: ChangeLog
.pc/bfin/: ChangeLog  Makefile.in  README  configure
.pc/closure-api-example-doc/: ChangeLog.libffi
.pc/darwin-EH-fix/: ChangeLog
.pc/darwin-missing-semi/: ChangeLog
.pc/darwin11/: ChangeLog  configure  configure.ac
.pc/darwin12/: ChangeLog  configure.ac
.pc/debug-build/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac  msvcc.sh
.pc/define-generic-symbols-carefully/: ChangeLog
.pc/dist-tests/: ChangeLog
.pc/emutramp/: ChangeLog  README  configure  configure.ac
.pc/ffi_last_abi/: ChangeLog
.pc/fix-docs/: ChangeLog.libffi
.pc/fix-grammar/: ChangeLog
.pc/fix-huge_struct-on-solaris/: ChangeLog.libffi
.svn/: dir-prop-base  entries
4.1.0/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
4.2.0/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
4.2.1/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
CVSROOT/: auto_checkout  checkoutlist  commit_prep  commitinfo  config  cvswrappers  log_accum  loginfo  modules  readers
doc/: libffi.info  libffi.texi  stamp-vti  version.texi
htdocs/: ChangeLog  index.html
include/: Makefile.in  ffi.h.in  ffi_common.h
jnalib/: .classpath  .project  OTHERS  TODO  build.xml  pom.xml  release-notes.html  release-notes.txt
lib/: clover.license  java16-1.1.signature
libffi/: .gitignore  ChangeLog  ChangeLog.libffi  LICENSE  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config-ml.in  configure  configure.ac  configure.in  debug.c  fficonfig.h.in  ffitest.c  java_raw_api.c  libffi.pc.in  libtool-version  ltconfig  ltmain.sh  prep_cif.c  raw_api.c  types.c
libffi.xcodeproj/: project.pbxproj
libffi/include/: Makefile.am  Makefile.in  ffi.h  ffi.h.in  ffi_common.h  ffi_mips.h  ffi_private.h
libffi/src/: Makefile.am  Makefile.in  debug.c  ffitest.c  java_raw_api.c  prep_cif.c  raw_api.c  types.c
libffi/src/alpha/: ffi.c  osf.S
libffi/src/arm/: ffi.c  sysv.S
libffi/src/frv/: eabi.S
libffi/src/ia64/: unix.S
libffi/src/mips/: ffi.c  n32.S  o32.S
libffi/src/pa/: linux.S
libffi/src/powerpc/: asm.h  ffi.c  ffitarget.h  sysv.S
libffi/src/s390/: ffi.c  sysv.S
libffi/src/sh/: ffi.c  sysv.S
libffi/src/sh64/: ffi.c  sysv.S
libffi/src/sparc/: ffi.c  v8.S  v9.S
libffi/src/x86/: ffi.c  ffitarget.h  sysv.S  unix64.S  win32.S
m4/: ax_cc_maxopt.m4  ax_enable_builddir.m4  libtool.m4
man/: Makefile.in  ffi_prep_cif.3
maven/: .project  pom.xml
native/: Makefile  README.libffi  build.xml  callback.c  callback.c~  cc.sh  dispatch.c  dispatch.h  dispatch.h~  dll-callback.S  dll-callback.c  jnidispatch.rc  ld.sh  pom.xml  protect.h  snprintf.h  testlib.c  testlib2.c  thread.h  wrap_vsnprintf.c
nbproject/: .cvsignore  build-impl.xml  genfiles.properties  ide-file-targets.xml  project.xml
parent/: build-base.xml  build-compile.xml  pom.xml
patches/: aarch64  aix-fix  aix-ibm-xlc  alpha  amd64-openbsd  amiga  apple-fixes  autoconf-archive-update  avr32  avr32-test  bad-abi-fix  bfin  closure-api-example-doc  darwin-EH-fix  darwin-missing-semi  darwin11  darwin12  debug-build  define-generic-symbols-carefully  dist-tests  emutramp  ffi_last_abi  fix-comments  fix-grammar  fix-huge_struct-on-solaris  fix-huge_struct-test  fix-ppc32  fix-xfails  fix_maxopt  hpux-mallinfo  icc128  interix  ios  ios-fix  ios-fixes  irix  kfreebsd-mmap  m68k-patches  mint  mips64  (+44 more)
samples/: README.md
scripts/: upload.sh
src/: closures.c  closures.c.rej  dlmalloc.c  java_raw_api.c  prep_cif.c
test/: logback.xml
testsuite/: Makefile.am  Makefile.in
trading_bot_app/: __init__.py  backtesting.py  config.py  ib_client.py  indicators.py  main.py  ml_manager.py  strategy.py  ui.py  utils.py
www/: .project  AndroidDevelopmentEnvironment.md  BuildingNativeLibraries.md  ByRefArguments.md  CallbacksAndClosures.md  Contributing.md  CustomMappings.md  DevelopInIDE.md  DirectMapping.md  DynamicallyTypedLanguages.md  FreeBSD.md  FrequentlyAskedQuestions.md  FunctionalDescription.md  GettingStarted.md  MacDevelopmentEnvironment.md  Mappings.md  PlatformLibrary.md  PointersAndArrays.md  PublishingToMavenCentral.md  RaspberryPiDevelopmentEnvironment.md  ReleasingJNA.md  StructuresAndUnions.md  WindowsDevelopmentEnvironment.md  index.html  release-notes.html  style.css
(+42228 files in other folders)
